--- a/app/src/main/res/drawable/shape_go_login_bg.xml
+++ b/app/src/main/res/drawable/shape_go_login_bg.xml
@@ -8,4 +8,8 @@
         android:startColor="@color/colorMain" />
     <!--圆角-->
     <corners android:radius="20dp" />
+    <!--边框-->
+    <stroke
+        android:width="1dp"
+        android:color="#FF836C" />
 </shape>
