--- a/app/src/main/res/drawable/shape_go_login_bg.xml
+++ b/app/src/main/res/drawable/shape_go_login_bg.xml
@@ -11,5 +11,5 @@
     <!--边框-->
     <stroke
         android:width="1dp"
-        android:color="#FF836C" />
+        android:color="@color/colorMain" />
 </shape>
